--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "vite build",
   "outputDirectory": "dist/public",
-  "framework": "vite",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "framework": "vite"
 }
